# mjwarp_adtesting

./: .gitignore  README.md  conftest.py  pyproject.toml
mjwarp_adtest/: __init__.py  config.py
mjwarp_adtest/analysis/: __init__.py  plot_utils.py  report_generator.py
mjwarp_adtest/determinism_tests/: conftest.py  test_contact_fields.py  test_integrator_determinism.py  test_model_coverage.py  test_multi_world.py  test_perf_memory.py  test_perf_overhead.py  test_perf_scaling.py  test_physics_equivalence.py  test_pipeline_determinism.py  test_robustness.py  test_sensor_determinism.py  test_solver_constraint.py  test_sort_edge_cases.py  test_trajectory_determinism.py
mjwarp_adtest/fixtures/: __init__.py  data_factory.py  finite_difference.py  loss_functions.py
mjwarp_adtest/math_tests/: __init__.py  conftest.py  test_chain_rule.py  test_edge_cases.py  test_jacobian_ad_vs_fd.py  test_multi_step.py  test_solver_implicit.py  test_taylor_convergence.py
mjwarp_adtest/models/: __init__.py  registry.py  xml_defs.py
mjwarp_adtest/perf_tests/: __init__.py  conftest.py  test_ad_overhead.py  test_clone_overhead.py  test_memory_overhead.py  test_scaling.py
mjwarp_adtest/visual_tests/: __init__.py  conftest.py  test_gradient_viz.py  test_simulation_parity.py
scripts/: generate_report.py  run_all.py
